--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--ICS20-Unit2-04-JS-->
 <html>
   <head>
     <meta charset="utf-8" />
@@ -31,6 +32,7 @@
         </div>
       </header>
       <main class="mdl-layout__content">
+        <!--formulas and images-->
         <table>
           <tr>
             <th>
@@ -87,7 +89,8 @@
         >
           Calculate
         </button>
-        <br />
+        <br>
+        <br>
         <div id="area"></div>
       </main>
     </div>
